fixes bug 229984 "HTTP download of over 64MB causes disk cache to break" r=gordon sr=bzbarsky